@@ -1,6 +1,6 @@
 .. _1.7.1:
 
-GammaLib 1.7.1 release (20 July 2020)
+GammaLib 1.7.1 release (22 July 2020)
 =====================================
 
 Overview
@@ -10,4 +10,5 @@ GammaLib 1.7.1 is a bug fix release for GammaLib release 1.7.
 
 The following bugs were fixed:
 
-* ...
+* [`3279 <https://cta-redmine.irap.omp.eu/issues/3279>`_] -
+  Fix broken power law flux and eflux computation bug
